# interactive-ai-toolkit-main

./: .gitignore  LICENSE  README.md  compatibility.py  ffmpeg_support.py  fix_env.sh  notes.txt  pyproject.toml  requirements.txt  run  run.py  setup_env.py  shared_messages.py  transcribe.py  tts.py
.github/workflows/: codeql.yml  ensure-notes.yml
browser_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
scripts/: ensure_requirements.py  generate_notes.py  install_ffmpeg.sh  self_debug.py  verify_environment_setup.py
tests/: conftest.py  test_cli.py  test_compatibility.py  test_ensure_requirements.py  test_run_transcribe_import.py  test_run_virtualenv.py  test_self_debug.py  test_setup_env.py  test_transcribe.py  test_tts.py  test_universal_llm_facade.py  test_universal_llm_provider_openai.py  test_universal_llm_safe_json.py
universal_llm/: __init__.py  cli.py  core.py
universal_llm/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  ollama.py  openai.py  openai_compatible.py  vertex.py
