[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-llm"
version = "0.1.0"
description = "Provider-agnostic client for orchestrating multiple LLM providers behind a unified API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Geoffrey Plymale" }
]
keywords = ["llm", "ai", "chat", "typer", "httpx", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=1.10",
  "typer>=0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.29"]
openai = ["openai>=1.30"]
azure = ["azure-ai-inference>=1.0.0"]
vertex = ["google-cloud-aiplatform>=1.49.0", "google-auth>=2.14.0"]
ollama = ["ollama>=0.1.8"]
yaml = ["pyyaml>=6.0"]
providers = [
  "universal-llm[anthropic]",
  "universal-llm[openai]",
  "universal-llm[azure]",
  "universal-llm[vertex]",
  "universal-llm[ollama]",
  "universal-llm[yaml]",
]

[project.scripts]
llm = "universal_llm.cli:app"

[project.urls]
Homepage = "https://github.com/geoffreyplymale/interactive-ai-toolkit"
Source = "https://github.com/geoffreyplymale/interactive-ai-toolkit"
Issues = "https://github.com/geoffreyplymale/interactive-ai-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["universal_llm*", "tests*", "scripts*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true
warn_unused_configs = true
packages = ["universal_llm"]

[tool.ruff]
line-length = 100
src = ["universal_llm", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

